manifests/_crds/routes.serving.knative.dev.yaml
apiVersion: v1
items:
- apiVersion: serving.knative.dev/v1
  kind: Route
  metadata:
    annotations:
      serving.knative.dev/creator: system:serviceaccount:kubeflow:kserve-controller-manager
      serving.knative.dev/lastModifier: system:serviceaccount:kubeflow:kserve-controller-manager
    finalizers:
    - routes.serving.knative.dev
    labels:
      component: predictor
      serving.knative.dev/service: maintenance-predictor-predictor
      serving.kserve.io/inferenceservice: maintenance-predictor
    name: maintenance-predictor-predictor
    namespace: kubeflow-user-example-com
    ownerReferences:
    - apiVersion: serving.knative.dev/v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: maintenance-predictor-predictor
  spec:
    traffic:
    - configurationName: maintenance-predictor-predictor
      latestRevision: true
      percent: 100
  status:
    address:
      url: http://maintenance-predictor-predictor.kubeflow-user-example-com.svc.cluster.local
    conditions:
    - lastTransitionTime: "2026-04-19T21:47:30Z"
      status: "True"
      type: AllTrafficAssigned
    - lastTransitionTime: "2026-04-16T11:04:15Z"
      message: external-domain-tls is not enabled
      reason: TLSNotEnabled
      status: "True"
      type: CertificateProvisioned
    - lastTransitionTime: "2026-04-20T05:30:28Z"
      status: "True"
      type: IngressReady
    - lastTransitionTime: "2026-04-20T05:30:28Z"
      status: "True"
      type: Ready
    observedGeneration: 1
    traffic:
    - latestRevision: true
      percent: 100
      revisionName: maintenance-predictor-predictor-00004
    url: http://maintenance-predictor-predictor.kubeflow-user-example-com.35.241.255.137.nip.io
kind: List
metadata:
